video 페이지 수정 반응형 수정

--- a/html/feed.html
+++ b/html/feed.html
@@ -44,7 +44,7 @@
             <img src="../img/alarm.png" alt="알림">
             <span class="position-absolute top-40 start-60 translate-middle badge rounded-pill bg-danger">
             10<span class="visually-hidden">unread messages</span>
-          </span>
+            </span>
           </button>
           <button class="non-btn" type="button" data-bs-toggle="modal" data-bs-target="#userInfoModal">
             <img class="card-icon" src="../img/dory.jpg">
@@ -95,6 +95,10 @@
     </ul>
     <ul class="nav flex-column menu-inline">
       <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#">구독</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="../html/subscribe.html" title="뷰티풀너드">
+        <img class="button-img card-icon" src="../img/beautifulnerd.jpg" alt="뷰티풀너드">뷰티풀너드</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="모든 구독">
+        <img class="button-img" src="../img/list.png" alt="모든 구독">모든 구독</a></li>
     </ul>
     <ul class="nav flex-column menu-inline">
       <li class="nav-item sidebar-slide-item">탐색</li>
@@ -194,12 +198,12 @@
         <h5 class="fw-bolder">최신순</h5>
         <div class="d-flex align-items-center">
           <a href="" class="d-flex align-items-center justify-content-center border-light feedback-btn" style="text-decoration: none; margin-right: 10px; width: 80px;">관리</a>
-          <a class="sidebar-close-btn" type="button" title="바둑판식" style="">
-            <img src="../img/grid_view.png" style="height: 30px;" >
-          </a>
-          <a class="sidebar-close-btn" type="button" title="목록">
-            <img src="../img/list.png" style="height: 30px;">
-          </a>
+          <button class="sidebar-close-btn" type="button" title="바둑판식">
+            <img src="../img/grid_view.png" alt="알림">
+          </button>
+          <button class="sidebar-close-btn" type="button" title="목록">
+            <img src="../img/list.png" alt="알림">
+          </button>
         </div>
       </div>
 
