--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
     </ul>
     <ul class="nav flex-column menu-inline">
       <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#">구독</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="html/subscribe.html" title="뷰티풀너드">
+        <img class="button-img card-icon" src="img/beautifulnerd.jpg" alt="뷰티풀너드">뷰티풀너드</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="모든 구독">
+        <img class="button-img" src="img/list.png" alt="모든 구독">모든 구독</a></li>
     </ul>
     <ul class="nav flex-column menu-inline">
       <li class="nav-item sidebar-slide-item">탐색</li>
@@ -204,8 +208,8 @@
         </div>
       </div>
 
-      <div class="main-video-scroll row row-cols-1" id="video-list">
-        <div class="card col-lg-4 col-md-6" id="card-template" style="display: none;">
+      <div class="main-video-scroll row row-cols-1" id="main-video-list">
+        <div class="card col-lg-4 col-md-6" id="main-card-template" style="display: none;">
           <a href="#" class="border-light video-card">
             <div class="video-container">
               <img src="" class="card-img-top" data-thumbnail>
