--- a/html/video.html
+++ b/html/video.html
@@ -96,6 +96,10 @@
     </ul>
     <ul class="nav flex-column menu-inline">
       <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#">구독</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="../html/subscribe.html" title="뷰티풀너드">
+        <img class="button-img card-icon" src="../img/beautifulnerd.jpg" alt="뷰티풀너드">뷰티풀너드</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="모든 구독">
+        <img class="button-img" src="../img/list.png" alt="모든 구독">모든 구독</a></li>
     </ul>
     <ul class="nav flex-column menu-inline">
       <li class="nav-item sidebar-slide-item">탐색</li>
@@ -251,27 +255,26 @@
     </div>
   </div>
 
-  <div class="secondary">
-    <div class="item">
-      <div class="secondary-video-scroll" id="video-list">
-        <div class="card" id="card-template" style="display: none;">
-          <a href="#" class="border-light video-card">
-            <div class="card-body d-flex align-items-start">
-              <div class="video-container me-3" style="flex-shrink: 0;">
-                <img src="" class="card-img-top" data-thumbnail>
-                <div class="iframe-wrapper" data-iframe></div>
-              </div>
-              <div>
-                <h6 class="card-title line-clamp" data-title></h6>
-                <p class="card-text" data-uploader></p>
-                <p class="card-text" data-meta></p>
-              </div>
+  <div class="secondary main-video-scroll row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-1 g-3" id="video-list">
+    <div class="col" id="card-template" style="display: none;">
+      <div class="card video-card-custom h-100">
+        <a href="#" class="border-light video-card text-decoration-none text-dark">
+          <div class="d-flex flex-column flex-lg-row align-items-start">
+            <div class="video-container me-lg-3 mb-lg-0" style="flex-shrink: 0;">
+              <img src="" class="card-img-top" data-thumbnail style="object-fit: cover;">
+              <div class="iframe-wrapper" data-iframe></div>
             </div>
-          </a>
-        </div>
+            <div class="video-container-text">
+              <h5 class="card-title" data-title></h5>
+              <p class="card-text" data-uploader></p>
+              <p class="card-text" data-meta></p>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
   </div>
+
 
   <div class="comment">
     <div class="comment-header align-items-center row">
@@ -287,7 +290,8 @@
         <img src="../img/dory.jpg" class="card-icon">
         <input type="text" id="messageInput" class="form-control border-0 border-bottom"
                placeholder="댓글 추가..." style="box-shadow: none;">
-        <button id="addCommentBtn" class="non-btn" style="width: 80px">등록</button>
+        <button id="cancelCommentBtn" class="non-btn" style="width: 80px; display: none">취소</button>
+        <button id="addCommentBtn" class="non-btn" style="width: 80px; display: none">등록</button>
       </div>
       <div id="commentList" class="d-flex flex-column"></div>
     </div>
