--- a/html/feed.html
+++ b/html/feed.html
@@ -26,8 +26,8 @@
         </div>
         <div class="d-flex align-items-center justify-content-center w-100 px-3">
           <div class="input-group search-bar flex-grow-1 me-3">
-            <input type="search" class="form-control" placeholder="검색" aria-describedby="button-addon2">
-            <button class="search-btn btn btn-outline-secondary" type="button" id="button-addon2" title="검색">
+            <input type="search" class="form-control" placeholder="검색" id="search-input-inner" aria-describedby="search-button-inner">
+            <button class="search-btn btn btn-outline-secondary" type="button" id="search-button-inner" title="검색">
               <img src="../img/search.png" alt="">
             </button>
           </div>
@@ -95,8 +95,14 @@
     </ul>
     <ul class="nav flex-column menu-inline">
       <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#">구독</a></li>
-      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="../html/subscribe.html" title="뷰티풀너드">
+      <li class="nav-item sidebar-slide-item inneruploaderlink"><a class="navbar-brand" href="" title="뷰티풀너드">
         <img class="button-img card-icon" src="../img/beautifulnerd.jpg" alt="뷰티풀너드">뷰티풀너드</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="dory">
+        <img class="button-img card-icon" src="../img/dory.jpg" alt="dory">dory</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="띱 Deep">
+        <img class="button-img card-icon" src="../img/deep.jpg" alt="띱 Deep">띱 Deep</a></li>
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="너덜트">
+        <img class="button-img card-icon" src="../img/nerdult.jpg" alt="너덜트">너덜트</a></li>
       <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="모든 구독">
         <img class="button-img" src="../img/list.png" alt="모든 구독">모든 구독</a></li>
     </ul>
