--- a/html/subscribe.html
+++ b/html/subscribe.html
@@ -6,8 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <link href="../css/total.css" rel="stylesheet">
-  <link href="../css/main.css" rel="stylesheet">
-  <link href="../css/video.css" rel="stylesheet">
+  <link href="../css/subscribe.css" rel="stylesheet">
 </head>
 <body>
 
@@ -98,11 +97,11 @@
       <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#">구독</a></li>
       <li class="nav-item sidebar-slide-item inneruploaderlink"><a class="navbar-brand" href="" title="뷰티풀너드">
         <img class="button-img card-icon" src="../img/beautifulnerd.jpg" alt="뷰티풀너드">뷰티풀너드</a></li>
-      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="dory">
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="" title="dory">
         <img class="button-img card-icon" src="../img/dory.jpg" alt="dory">dory</a></li>
-      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="띱 Deep">
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="" title="띱 Deep">
         <img class="button-img card-icon" src="../img/deep.jpg" alt="띱 Deep">띱 Deep</a></li>
-      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="너덜트">
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="" title="너덜트">
         <img class="button-img card-icon" src="../img/nerdult.jpg" alt="너덜트">너덜트</a></li>
       <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="모든 구독">
         <img class="button-img" src="../img/list.png" alt="모든 구독">모든 구독</a></li>
@@ -197,139 +196,155 @@
 
 <div id="section1"></div>
 
-<div class="columns">
-  <div class="primary">
-    <div class="player">
-      <div class="player-inner">
-        <div class="">
-          <iframe id="youtube-frame" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-      </div>
+<div class="contents d-flex">
+  <div class="columns">
+    <!-- 왼쪽 사이드바 -->
+    <div class="main-navbar">
+      <a class="main-navbar-item" href="../index.html" title="홈"><img src="../img/home.png"><br>홈</a>
+      <a class="main-navbar-item" href="#" title="Shorts"><img src="../img/shorts.png"><br>Shorts</a>
+      <a class="main-navbar-item" href="../html/feed.html" title="구독"><img src="../img/subscriptions.png"><br>구독</a>
+      <a class="main-navbar-item" href="#" title="내 페이지"><img src="../img/my.png"><br>내 페이지</a>
     </div>
 
-    <div class="below">
-      <div class="title row row-cols-1 g-0">
-        <h5 class="fw-bold" id="youtube-title"></h5>
-        <div class="channel-info d-flex flex-row flex-wrap justify-content-between align-items-center mt-3">
-          <div class="d-flex align-items-center gap-2 flex-shrink-1">
-            <button class="card-icon" type="button">
-              <img class="card-icon" src="" id="youtube-icon">
-            </button>
-            <div class="channel-text">
-              <a href="#" class="border-light text-decoration-none text-dark">
-                <h6 class="card-title mb-1" id="youtube-uploader"></h6>
-                <p class="card-text" id="youtube-subs"></p>
+    <div class="columnslayout">
+      <div class="primary border-bottom">
+        <div id="page-header-container" class="page-header-container">
+          <div id="page-header-banner" class="page-header-banner">
+            <div class="">
+              <img src="../img/beautifulnerd_banner.jpg" class="page-header-banner-sizer">
+            </div>
+          </div>
+          <div id="page-header" class="page-header">
+            <div class="d-flex align-items-start">
+              <div class="me-3" style="flex-shrink: 0;">
+                <img src="../img/beautifulnerd.jpg" class="page-header-icon">
+              </div>
+              <div>
+                <h1 data-title>뷰티풀너드</h1>
+                <p class="card-text" data-uploader>@뷰티풀너드
+                  •
+                  구독자 135만명
+                  •
+                  동영상 1.4천개</p>
+                <p class="card-text" data-meta>광고 문의: beautifulnerd@metacomedy.net</p>
+                <button class="d-flex align-items-center justify-content-center make-btn" type="button" style="width: 120px;">
+                  <img src="../img/notifications.png" alt="">구독중<img src="../img/arrow_down.png" alt="">
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="tabs-container" class="tabs-container">
+          <div id="tabsContent" class="tabsContent">
+            <ul class="nav nav-underline">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">홈</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">동영상</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shorts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">재생목록</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">게시물</a>
+              </li>
+              <li class="nav-item">
+                <button class="non-btn" type="button" title="">
+                  <img src="../img/search.png" alt="검색">
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+
+        <div class="border-bottom">
+          <div class="d-flex align-items-start" style="padding: 20px 0 20px 0;">
+            <a href="../html/video.html?id=HIeZ8W0zLMA" class="border-light text-decoration-none text-dark" style="display: flex; flex-direction: row;">
+              <div class="" style="flex-shrink: 0;">
+                <img class="subscribe-card-img-top" src="https://img.youtube.com/vi/HIeZ8W0zLMA/mqdefault.jpg" alt="">
+              </div>
+              <div style="margin-left: 10px">
+                <h4 data-title>[4K] 고추잠자리 - 작은 봄 Official M/V</h4>
+                <p class="card-text">뷰티풀너드
+                  조회수 2,016,408회 • 3개월 전</p>
+                <p class="subscribe-card-text card-text">MV Directed by Kwon Meen
+                  Assistant Director & Producer Jang Yejin
+
+                  DOP
+                  Kim Jeehoo
+
+                  Assistant Camera
+                  MOGEOSU
+
+                  Design
+                  Lee Jungmin
+
+                  Artist Manger
+                  Choi Wooseong
+                  Yang Namsu
+                  Kim Kibeom
+
+                  Documentary team
+                  MOGEOSU
+
+                  Hair & Make up
+                  Areum
+                  竹内 未夢
+
+                  Special Thanks to
+                  Parkryeok
+
+                  MUSIC CREDIT
+
+                  Lyrics by Choi Jaewoo, Gist, HOON, GORAE
+                  Composed by TOIL, Pateko, HAAN, Gist, HOON
+                  Arranged by TOIL, Pateko, HAAN
+
+                  Piano Lee Myungho
+                  Bass Park Chanmin
+                  String Lim Woobin
+                  Guitar Choi Yeonghun
+                  Drum Lee Myungho, TOIL
+                  Percussion HAAN</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="secondary subscribe-video-scroll row" id="subscribe-video-list">
+          <div class="col" id="subscribe-card-template" style="display: none;">
+            <div class="card video-card-custom h-100">
+              <a href="#" class="border-light video-card text-decoration-none text-dark">
+                <div class="flex-column flex-lg-row align-items-start">
+                  <div class="video-container mb-lg-0" style="flex-shrink: 0;">
+                    <img src="" class="subscribe-card-img-top" data-thumbnail style="object-fit: cover;">
+                    <div class="iframe-wrapper" data-iframe></div>
+                  </div>
+                  <div class="video-container-text">
+                    <h5 class="card-title" data-title></h5>
+                    <p class="card-text" data-uploader></p>
+                    <p class="card-text" data-meta></p>
+                  </div>
+                </div>
               </a>
             </div>
-            <button class="btn btn-dark subscribe-btn" type="button">구독</button>
-          </div>
-          <div class="d-flex align-items-center flex-wrap gap-2 flex-shrink-0">
-            <div class="d-flex align-items-center">
-              <button class="thumbup-btn d-flex align-items-center" id="thumbupbtn" type="button">
-                <span class="thumb-content">
-                  <span id="thumbup-num">100</span>
-                  <img src="../img/thumb_up.png" alt="좋아요">
-                </span>
-              </button>
-              <div class="thumb-divider"></div>
-              <button class="thumbdown-btn d-flex align-items-center" id="thumbdownbtn" type="button">
-                <span class="thumb-content">
-                  <img src="../img/thumb_down.png" alt="싫어요">
-                  <span id="thumbdown-num">100</span>
-                </span>
-              </button>
-            </div>
-            <button class="make-btn" type="button">
-              <img src="../img/share.png" title="공유">공유</button>
-            <button class="make-btn" type="button">
-              <img src="../img/save.png" title="저장">저장</button>
-            <button class="make-btn-little" type="button">
-              <img src="../img/more.png"></button>
           </div>
         </div>
-      </div>
-      <div class="owner">
-        <div class="owner-inner">
-          <div class="d-flex align-items-center gap-3">
-            <p id="owner-views"></p><p id="owner-uploadDate"></p>
-          </div>
-          <div class="owner-text" id="owner-text"></div>
-          <button class="show-btn fw-bold" id="showMore" onclick="showMore()">더보기</button>
-          <button class="show-btn fw-bold" id="showhidden" onclick="showhidden()" style="display: none;">간략히</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="secondary main-video-scroll row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-1 g-3" id="video-list">
-    <div class="col" id="card-template" style="display: none;">
-      <div class="card video-card-custom h-100">
-        <a href="#" class="border-light video-card text-decoration-none text-dark">
-          <div class="d-flex flex-column flex-lg-row align-items-start">
-            <div class="video-container me-lg-3 mb-lg-0" style="flex-shrink: 0;">
-              <img src="" class="card-img-top" data-thumbnail style="object-fit: cover;">
-              <div class="iframe-wrapper" data-iframe></div>
-            </div>
-            <div class="video-container-text">
-              <h5 class="card-title" data-title></h5>
-              <p class="card-text" data-uploader></p>
-              <p class="card-text" data-meta></p>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
+      <div class="comment">
 
-
-  <div class="comment">
-    <div class="comment-header align-items-center row">
-      <div class="actions-top d-flex align-items-center gap-3">
-        <div>
-          <h5 class="fw-bold" style="margin: 0 32px 0 0;">댓글 100개</h5>
-        </div>
-        <div>
-          <img class="" src="../img/sort.png" style="margin-right: 8px" title="댓글 정렬">정렬 기준
-        </div>
-      </div>
-      <div class="d-flex align-items-center mb-3">
-        <img src="../img/dory.jpg" class="card-icon">
-        <input type="text" id="messageInput" class="form-control border-0 border-bottom"
-               placeholder="댓글 추가..." style="box-shadow: none;">
-        <button id="cancelCommentBtn" class="non-btn" style="width: 80px; display: none">취소</button>
-        <button id="addCommentBtn" class="non-btn" style="width: 80px; display: none">등록</button>
-      </div>
-      <div id="commentList" class="d-flex flex-column"></div>
-    </div>
-    <div id="comment-container">
-      <div class="channel-text comment-template gap-3" id="comment-template">
-        <button class="non-btn" type="button">
-          <img class="card-icon" src="" data-avatar>
-        </button>
-        <div>
-          <div class="d-flex align-items-center gap-2">
-            <h6 class="card-title mb-1" data-user></h6>
-            <span data-time class="text-muted small"></span>
-          </div>
-          <span class="comment-line" data-comment></span>
-          <div class="d-flex align-items-center gap-2">
-            <div class="comment-icon">
-              <img src="../img/thumb_up.png" title="좋아요">
-            </div>
-            <span class="card-text" data-likes>0</span>
-            <div class="comment-icon">
-              <img src="../img/thumb_down.png" title="싫어요">
-            </div>
-            <span class="card-text" data-dislikes>0</span>
-            <button class="sidebar-close-btn" type="button" title="답글">답글</button>
-          </div>
-        </div>
       </div>
     </div>
+    <div id="sidebarOverlay" class="sidebar-overlay"></div>
   </div>
-  <div id="sidebarOverlay" class="sidebar-overlay"></div>
 </div>
 <script src="../js/total.js"></script>
-<script src="../js/video.js"></script>
+<script src="../js/subscribe.js"></script>
 </body>
 </html>
