--- a/html/video.html
+++ b/html/video.html
@@ -210,12 +210,12 @@
     <div class="below">
       <div class="title row row-cols-1 g-0">
         <h5 class="fw-bold" id="youtube-title"></h5>
-        <div class="channel-info d-flex flex-row flex-wrap justify-content-between align-items-center mt-3">
+        <div class="channel-info d-flex flex-row flex-wrap justify-content-between align-items-center">
           <div class="d-flex align-items-center gap-2 flex-shrink-1">
             <button class="card-icon" type="button">
               <img class="card-icon" src="" id="youtube-icon">
             </button>
-            <div class="channel-text">
+            <div class="channel-text" style="margin-left: 10px">
               <a href="#" class="border-light text-decoration-none text-dark">
                 <h6 class="card-title mb-1" id="youtube-uploader"></h6>
                 <p class="card-text" id="youtube-subs"></p>
