12일차 커밋 검색 시 카드 css 수정

--- a/html/feed.html
+++ b/html/feed.html
@@ -221,7 +221,7 @@
                 <div class="iframe-wrapper" data-iframe></div>
               </div>
               <div class="card-body row">
-                <div class="col col-md-auto">
+                <div class="col-auto">
                   <img class="card-icon" src="" data-icon>
                 </div>
                 <div class="col">
