추가 구현 구독 버튼 변경 댓글 삭제 기능 아이콘 사이즈 변경

--- a/html/subscribe.html
+++ b/html/subscribe.html
@@ -16,7 +16,7 @@
       <div class="container-fluid d-flex flex-nowrap align-items-center justify-content-between">
         <div class="d-flex align-items-center flex-shrink-0">
           <button class="sidebar-close-btn" type="button" id="toggleSidebar">
-            <span class="toggler-icon"><img src="../img/menu.png" alt="" style="height: 35px;"></span>
+            <span class="toggler-icon"><img src="../img/menu.png" alt=""></span>
           </button>
           <a class="navbar-brand mb-0" href="#section1">
             <img src="../img/logo.png" alt="Logo" style="height: 30px;">
@@ -60,7 +60,7 @@
     <ul class="nav flex-column">
       <li class="nav-item d-flex align-items-center px-2">
         <button type="button" id="closeSidebarBtn" class="sidebar-close-btn">
-          <span class="toggler-icon"><img src="../img/menu.png" alt="" style="height: 35px;"></span>
+          <span class="toggler-icon"><img src="../img/menu.png" alt=""></span>
         </button>
         <a class="navbar-brand mb-0" href="../index.html">
           <img src="../img/logo.png" alt="Logo" style="height: 30px;">
@@ -134,7 +134,7 @@
 <div class="modal fade" id="userInfoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document"
-       style="float: right; width: 350px; padding-top: 25px">
+       style="float: right; width: 300px; padding-top: 25px">
     <div class="modal-content">
       <div class="modal-header" style="border: 0;">
         <div class="col col-md-auto" style="padding-right: 20px;">
