--- a/html/feed.html
+++ b/html/feed.html
@@ -18,7 +18,7 @@
         <!-- 왼쪽: 로고 + 토글버튼 -->
         <div class="d-flex align-items-center flex-shrink-0">
           <button class="sidebar-close-btn" type="button" id="toggleSidebar">
-            <span class="toggler-icon"><img src="../img/menu.png" alt="" style="height: 35px;"></span>
+            <span class="toggler-icon"><img src="../img/menu.png" alt=""></span>
           </button>
           <a class="navbar-brand mb-0" href="#section1">
             <img src="../img/logo.png" alt="Logo" style="height: 30px;">
@@ -61,7 +61,7 @@
     <ul class="nav flex-column">
       <li class="nav-item d-flex align-items-center px-2">
         <button type="button" id="closeSidebarBtn" class="sidebar-close-btn">
-          <span class="toggler-icon"><img src="../img/menu.png" alt="" style="height: 35px;"></span>
+          <span class="toggler-icon"><img src="../img/menu.png" alt=""></span>
         </button>
         <a class="navbar-brand mb-0" href="../index.html">
           <img src="../img/logo.png" alt="Logo" style="height: 30px;">
@@ -132,7 +132,7 @@
 
 <!-- 모달 -->
 <div class="modal fade" id="userInfoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document" style="float: right; width: 350px; padding-top: 25px">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document" style="float: right; width: 300px; padding-top: 25px">
     <div class="modal-content">
       <div class="modal-header" style="border: 0;">
         <div class="col col-md-auto" style="padding-right: 20px;">
